--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.0.12",
     "@nestjs/swagger": "^11.0.3",
+    "@nestjs/websockets": "^11.0.12",
     "@types/bcryptjs": "^2.4.6",
     "@types/multer": "^1.4.12",
     "@types/passport-jwt": "^4.0.1",
@@ -45,6 +47,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
