update translation service

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/multer": "^1.4.12",
     "@types/passport-jwt": "^4.0.1",
+    "@vitalets/google-translate-api": "^9.2.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
